fix_log.txt
python :   File "<string>", line 20
At line:1 char:1
+ python -c "
+ ~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (  File "<string>", line 20:String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
    print(f'Fixed Q:{q[" question_id\]}
                       ^
SyntaxError: unterminated string literal (detected at line 20)
